I Correcte margin collapse

--- a/collapse.css
+++ b/collapse.css
@@ -1,9 +1,8 @@
-div{
-    background-color: blue;
-   margin-top: 1rem;
-}
-
-p{
+h1 {
+    margin-top: 1rem;
+    background: #cfc;
+  }
+  p {
     margin-top: 2rem;
-    background-color: red
-}
+    background:  #cf9;
+  }
